Fix sticky footer on smaller screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,12 @@
 	html, body {
 		height: 100%;
 	}
+	
+	.footer {
+		position: absolute;
+  	    bottom: 0;
+  	    width: 100%;
+	}
 }
 
 @keyframes flowInBlue {
@@ -204,9 +210,6 @@ ul {
 	justify-content: center;
 	padding-bottom: 1em;
 	padding-top: 1em;
-	position: absolute;
-  	bottom: 0;
-  	width: 100%;
 }
 
 .footer-item {
